exports[`components/Image passes other props through to underlying View 1`] = `
<div
  className="rnw-View rnw-View-flexReset rnw-Image rnw-Image-cover"
  onResponderGrant={[Function]}
  role="img"
  style={Object {}} />
`;

exports[`components/Image prop "accessibilityLabel" 1`] = `
<div
  aria-label="accessibilityLabel"
  className="rnw-View rnw-View-flexReset rnw-Image rnw-Image-cover"
  role="img"
  style={Object {}} />
`;

exports[`components/Image prop "accessible" 1`] = `
<div
  aria-hidden={true}
  className="rnw-View rnw-View-flexReset rnw-Image rnw-Image-cover"
  role="img"
  style={Object {}} />
`;

exports[`components/Image prop "children" 1`] = `
<div
  className="rnw-View rnw-View-flexReset rnw-Image rnw-Image-cover"
  role="img"
  style={Object {}}>
  <div
    className="unique" />
</div>
`;

exports[`components/Image prop "defaultSource" does not override "height" and "width" styles 1`] = `
<div
  className="rnw-View rnw-View-flexReset rnw-Image rnw-Image-cover"
  role="img"
  style={
    Object {
      "backgroundImage": "url(\"https://google.com/favicon.ico\")",
      "height": "20px",
      "width": "40px",
    }
  } />
`;

exports[`components/Image prop "defaultSource" sets "height" and "width" styles if missing 1`] = `
<div
  className="rnw-View rnw-View-flexReset rnw-Image rnw-Image-cover"
  role="img"
  style={
    Object {
      "backgroundImage": "url(\"https://google.com/favicon.ico\")",
      "height": "10px",
      "width": "20px",
    }
  } />
`;

exports[`components/Image prop "defaultSource" sets background image when value is a string 1`] = `
<div
  className="rnw-View rnw-View-flexReset rnw-Image rnw-Image-cover"
  role="img"
  style={
    Object {
      "backgroundImage": "url(\"https://google.com/favicon.ico\")",
    }
  } />
`;

exports[`components/Image prop "defaultSource" sets background image when value is an object 1`] = `
<div
  className="rnw-View rnw-View-flexReset rnw-Image rnw-Image-cover"
  role="img"
  style={
    Object {
      "backgroundImage": "url(\"https://google.com/favicon.ico\")",
      "height": undefined,
      "width": undefined,
    }
  } />
`;

exports[`components/Image prop "resizeMode" value "contain" 1`] = `
<div
  className="rnw-View rnw-View-flexReset rnw-Image rnw-Image-contain"
  role="img"
  style={Object {}} />
`;

exports[`components/Image prop "resizeMode" value "cover" 1`] = `
<div
  className="rnw-View rnw-View-flexReset rnw-Image rnw-Image-cover"
  role="img"
  style={Object {}} />
`;

exports[`components/Image prop "resizeMode" value "none" 1`] = `
<div
  className="rnw-View rnw-View-flexReset rnw-Image rnw-Image-none"
  role="img"
  style={Object {}} />
`;

exports[`components/Image prop "resizeMode" value "stretch" 1`] = `
<div
  className="rnw-View rnw-View-flexReset rnw-Image rnw-Image-stretch"
  role="img"
  style={Object {}} />
`;

exports[`components/Image prop "resizeMode" value "undefined" 1`] = `
<div
  className="rnw-View rnw-View-flexReset rnw-Image rnw-Image-cover"
  role="img"
  style={Object {}} />
`;

exports[`components/Image prop "style" correctly supports "resizeMode" property 1`] = `
<div
  className="rnw-View rnw-View-flexReset rnw-Image rnw-Image-contain"
  role="img"
  style={Object {}} />
`;

exports[`components/Image prop "testID" 1`] = `
<div
  className="rnw-View rnw-View-flexReset rnw-Image rnw-Image-cover"
  data-testid="testID"
  role="img"
  style={Object {}} />
`;

exports[`components/Image sets correct accessibility role" 1`] = `
<div
  className="rnw-View rnw-View-flexReset rnw-Image rnw-Image-cover"
  role="img"
  style={Object {}} />
`;
